terraform/aws/aws-eks/networking/eip.tf
resource "aws_eip" "eip" {
  domain = "vpc"

  depends_on = [
    aws_internet_gateway.igw
  ]
}
